# SystemVirtue-QUORUM

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.prod.yml  docker-compose.yml
apps/eval-runner/: collate_free_model_census.py  export_census_health.py  free_smoke.py  query_all_free_models.py  quorum_collective_benchmark.py  run_20_multimodel_quorum.py  runner.py  scheduled_free_model_census.py
apps/litellm/: config.yaml
apps/orchestrator/: Dockerfile  cli.py  pyproject.toml
apps/orchestrator/app/: main.py
apps/orchestrator/app/api/v1/: routes.py
apps/orchestrator/app/consensus/: engine.py
apps/orchestrator/app/core/: config.py  schemas.py
apps/orchestrator/app/hub/: classifier.py  prompts.py  roles.py  selection.py
apps/orchestrator/app/pipeline/: model_client.py  quorum.py
apps/orchestrator/app/registry/: openrouter.py
apps/orchestrator/app/security/: redaction.py
apps/orchestrator/app/streaming/: events.py
apps/orchestrator/tests/: test_api.py  test_classifier.py  test_consensus.py  test_model_client.py  test_prompt_injection.py  test_redaction.py  test_selection.py
apps/webui/: Dockerfile  index.html
apps/worker/: Dockerfile  worker.py
benchmarks/SystemVirtue_custom/seed/: prompts.jsonl
benchmarks/dashboard/: README.md
docs/: api.md  architecture.md  critique-templates.md  model-selection.md  security.md  self-hosting.md  streaming-protocol.md
docs/benchmarks/: README.md  free-model-census.md
docs/integrations/: continue.md
infra/postgres/: init.sql
seed/: seed_capability_scores.json  seed_model_classes.json
(+1 files in other folders)
